fix the url's and make the topnav bar stop jumping around when changing the width
Docker-DCO-1.1-Signed-off-by: Sven Dowideit <SvenDowideit@fosiki.com> (github: SvenDowideit)

--- a/docs/theme/mkdocs/css/base.css
+++ b/docs/theme/mkdocs/css/base.css
@@ -116,6 +116,11 @@ body { padding-top: 0; }
     padding: 25px 15px 25px 15px;
     color: #777777;
 }
+#topmostnav .navbar-nav {
+	right: 0px;
+	top: 0px;
+	position: absolute;
+}
 #topmostnav .navbar-inner {
     padding-right: 0px;
     padding-left: 0px;
